# rust-wasm-benchmark

./: .gitignore  Cargo.toml  README.md  build.sh  test_in_nodejs.sh
docker/: nginx.conf  run.sh
docs/emcc/: index.html  index.js  sumInt.js  sumInt.wasm
docs/rust/: 0.bootstrap.js  bootstrap.js  index.html
emcc_c/: README.md  index.js  sumInt.c  sumInt.js  sumInt.wasm  sumIntInNodeJs.js
nodejs/: index.js  package.json
rust_www/: index.js  package-lock.json  package.json
src/: lib.rs
www/: index.html  main.js  testa.html  testa.js  testa.wasm  testaNodejs.js  testa_orig.wasm  testb.html  testb.js  testb.wasm  testb.wasm.js
